Fix dark mode

--- a/website/src/css/theme.css
+++ b/website/src/css/theme.css
@@ -8,13 +8,14 @@
   --ifm-heading-font-weight: 600;
 }
 
-.admonition {
-  --ifm-heading-color: var(--ifm-alert-color);
-}
-
 html[data-theme='dark'] {
+  --ifm-color-primary: rgb(25, 195, 190);
   --ifm-color-content: var(--ifm-color-emphasis-900);
   --ifm-heading-color: inherit;
+}
+
+.admonition {
+  --ifm-heading-color: var(--ifm-alert-color);
 }
 
 .docusaurus-highlight-code-line {
